--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,61 @@
-.App {
+@font-face {
+  font-family: Futurice;
+  src: url(./fonts/Futurice_Regular.otf);
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: Futurice;
+  src: url(./fonts/Futurice_Bold.otf);
+  font-weight: bold;
+}
+
+body{
+  background-color: #29266e;
+  color:#fff;
+  font-size:16px;
+  font-family: 'Futurice';
+}
+
+.header{
+  margin-top:70px;
+  background-color: #29266e;
+  font-size: 48px;
+  padding:100px 0px;
+  font-weight: bold;
+  display: flex;
   text-align: center;
+  justify-content: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+
+
+.svgContainer{
+  display: flex;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.polyLines{
+  fill:none;
+  stroke-width:1;
 }
 
-.App-intro {
-  font-size: large;
+svg{
+  margin:auto;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.headerText{
+  font-size: 18px;
+  fill:white;
+  text-anchor: middle;
+}
+
+.boxes{
+  fill:white;
+}
+
+.labelText{
+  font-size: 20px;
+  fill:white;
+  opacity: 0.6;
+
 }
